# httpd-datadog

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-3rdparty.csv  Makefile  README.md  SECURITY.md  install_moddatadog  install_module.sh  mirror-images.sh  requirements.txt  test-windows
.circleci/: continue_config.yml
.circleci/src/: @common.yml
.devcontainer/: Dockerfile  context.files  devcontainer.json  devcontainer.mk  run-integration-tests.sh
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.yml  config.yml
.github/workflows/: CI_IMAGE.md  dev.yml  release.yml  system-tests.yml
.gitlab/: Dockerfile  alltypes.h.diff  devcontainer.yml  iis.yml
cmake/: generate_build_id.cmake  toolchain-x86_64-pc-windows-msvc.cmake  utils.cmake
cmd/test_inject/: Cargo.toml  README.md
cmd/test_inject/src/: main.rs
doc/: configuration.md  dev.md  release.md
example/: Dockerfile  httpd.conf
example/htdoc/: big_chonk.html
examples/: CLAUDE.md  README.md  docker-compose.yml
examples/apache/: Dockerfile  apache-config.conf  httpd.conf
examples/httpjs/: Dockerfile  http.js
injector_IIS/: CMakeLists.txt  CMakePresets.json  README.md
injector_IIS/injector_IIS_installer/: Product.wxs
injector_IIS/resources/: RUMTools.ps1  RUM_schema.xml
injector_IIS/resources/modules/: Datadog.RUM.psm1
injector_IIS/src/: global_module.cpp  global_module.h  http_module.cpp  http_module.h  logger.h  module_context.h  telemetry.cpp  telemetry.h  version.cpp.in  version.h
injector_IIS/tasks/: iis.py  utils.py
injector_IIS/test/e2e_tests/: go.mod  injector_IIS_test.go
injector_IIS/test/e2e_tests/test_assets/default_site/: test-config.json  web.config
injector_IIS/test/e2e_tests/test_assets/sitewithapps/site1/app1/: test-config.json
injector_IIS/test/e2e_tests/test_assets/sitewithapps/site1/app2/: test-config.json
injector_IIS/test/e2e_tests/test_assets/sitewithapps/site1/app2/nested/: test-config.json
injector_IIS/test/unittests/: test_entrypoint.cpp  test_http_module.cpp
installer/: README.md  install-proxy-datadog.sh
installer/configurator/: configurator.go  configurator_test.go  go.mod  go.sum  httpd_configurator.go  nginx_configurator.go  proxy_configurator.go  proxy_configurator_test.go
installer/configurator/testdata/: basic.conf.snap  example1.conf.snap  example2.conf.snap  weird_http_spaces.conf.snap
lib/: README.md
lib/inject-browser-sdk/: Cargo.toml
lib/inject-browser-sdk-ffi/: Cargo.toml
lib/inject-browser-sdk-ffi/src/: injector.rs  lib.rs  snippet.rs
lib/inject-browser-sdk/src/: configuration.rs  error.rs  injector.rs  lib.rs  snippet.rs
mod_datadog/: CMakeLists.txt  symbols.ld  symbols.ld-prime
mod_datadog/include/: config.h  logger.h
mod_datadog/rum/: CMakeLists.txt
mod_datadog/rum/include/rum/: configuration.h  filter.h
mod_datadog/rum/src/: configuration.cpp  filter.cpp
mod_datadog/src/: common_conf.cpp  common_conf.h  logger.cpp  mod_datadog.cpp  mod_datadog.h  utils.h  version.cpp.in  version.h
mod_datadog/src/crash-tracker/: conf.cpp  conf.h  hook.cpp  hook.h
mod_datadog/src/rum/: config.cpp  config.h  filter.cpp  filter.h  telemetry.cpp  telemetry.h
mod_datadog/src/tracing/: conf.cpp  conf.h  hooks.cpp  hooks.h  logger.h  utils.h
mod_ddtrace/: CMakeLists.txt
mod_ddtrace/include/: config.h  logger.h  utils.h
mod_ddtrace/src/: mod_ddtrace.cpp  utils.cpp
scripts/: codestyle.sh  download_httpd.py  install-xwin-toolchain.py  license.py  license_tools.py  prefetch-deps.cmake  setup-httpd.py  setup-httpd.sh
test/: __main__.py  docker-compose.yaml  smoke.py  test_smoke.py
test/integration-test/: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  fake_agent.py  pyproject.toml  run_tests.sh  run_tests_docker.sh
test/integration-test/pytest_plugins/: __init__.py  integration_helpers.py
test/integration-test/scenarios/: README_RUM_TESTS.md  helper.py  test_configuration.py  test_log_injection.py  test_mpm.py  test_propagation.py  test_proxy.py  test_rum.py  test_smoke.py
test/integration-test/scenarios/conf/: agent_url.conf  default.conf  directives.conf  log_injection.conf  minimal.conf  mpm.conf  prefork_mpm.conf  propagation_style.conf  proxy.conf  rum_proxy.conf  rum_selective.conf  sampling_rate.conf
test/integration-test/scenarios/htdocs/: api.html  app.html  health.html  index.html  static.html
test/scenarios/: test_smoke.py
test/unit-test/: CMakeLists.txt  test_utils.cpp
tests/integration_tests/conf/: nginx.conf
windows/: Dockerfile
