[package]
name = "inject-browser-sdk-ffi"
description = "FFI for inject-browser-sdk package"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
name="inject_browser_sdk_ffi"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
# a single workspace run/bin can only use one set of features for its dependencies
# for now to make the `fuzz` project work correctly we need to set std feature the default
default = ["std"]
# default = []
std = ["inject-browser-sdk/std", "serde/std", "serde_json/std"]

[dependencies]
inject-browser-sdk = { path = "../inject-browser-sdk" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rustix = { version = "0.38", default-features = false, features = ["mm", "stdio"] }

# on linux use rustix-dlmalloc
[target.'cfg(target_os = "linux")'.dependencies]
rustix-dlmalloc = { version = "0.2.2", features = ["global"] }

# on other platforms use dlmalloc
[target.'cfg(not(target_os = "linux"))'.dependencies]
dlmalloc = { version = "0.2", features = ["global"] }


[dev-dependencies]
pretty_assertions = { version = "1.4.0", features = ["unstable"] }
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.26.0"
csbindgen = "1.8.0"
