[package]
name = "inject-browser-sdk"
description = "Injection library"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = []
std = ["serde/std", "serde_json/std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
pretty_assertions = { version = "1.4.0", features = ["unstable"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["std"] }
serde_json = { version = "1.0", features = ["std"] }

