[project]
name = "httpd-datadog-integration-tests"
version = "0.1.0"
description = "Integration tests for Apache httpd Datadog module"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.4.4",
    "requests>=2.31.0",
    "ddapm-test-agent>=1.40.0",
    "aiohttp>=3.9.0",
    "msgpack>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-timeout>=2.2.0",  # Test timeouts
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["scenarios"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
plugins = ["pytest_plugins.integration_helpers"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "smoke: marks tests as smoke tests",
    "ci: marks tests suitable for CI environment",
]

